--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -1,7 +1,3 @@
-# all:
-# 	gcc -L./mlx -lmlx -framework OpenGL -framework AppKit main.c
-# 	./a.out
-
 NAME = so_long
 CFLAGS = -Wall -Wextra -Werror
 MLX_FLAGS = -L./mlx -lmlx -framework OpenGL -framework Appkit
@@ -10,6 +6,7 @@ SRCS :=
 SRCS += main.c
 SRCS += get_next_line.c
 SRCS += checking_map.c
+SRCS += checking_map2.c
 SRCS += moving_player.c
 SRCS += utils.c
 SRCS += utils2.c
@@ -22,7 +19,7 @@ all: $(NAME)
 	$(CC) -c $(CFLAGS) $<
 
 $(NAME): $(OBJS)
-	$(CC) -fsanitize=address -o $@ $^ $(MLX_FLAGS)
+	$(CC) -o $@ $^ $(MLX_FLAGS)
 	@echo "\033[36m" --- 🔹 Compile Complete 🔹 ---
 
 clean:
@@ -35,4 +32,4 @@ re:
 	make fclean
 	make all
 
-.PHONY: all bonus clean fclean re
+.PHONY: all clean fclean re
