--- a/so_long/Makefile
+++ b/so_long/Makefile
@@ -1,6 +1,8 @@
 NAME = so_long
 CFLAGS = -Wall -Wextra -Werror
 MLX_FLAGS = -L./mlx -lmlx -framework OpenGL -framework Appkit
+MLX_DIR = mlx
+MLX=libmlx.a
 
 SRCS :=
 SRCS += main.c
@@ -10,6 +12,8 @@ SRCS += checking_map2.c
 SRCS += moving_player.c
 SRCS += utils.c
 SRCS += utils2.c
+SRCS += utils3.c
+SRCS += making_map.c
 
 OBJS = $(SRCS:.c=.o)
 
@@ -18,12 +22,17 @@ all: $(NAME)
 %.o: %.c
 	$(CC) -c $(CFLAGS) $<
 
-$(NAME): $(OBJS)
+$(MLX):
+	make -C $(MLX_DIR)
+
+$(NAME): $(OBJS) $(MLX)
+	cp ./$(MLX_DIR)/$(MLX) $(MLX)
 	$(CC) -o $@ $^ $(MLX_FLAGS)
 	@echo "\033[36m" --- 🔹 Compile Complete 🔹 ---
 
 clean:
 	rm -f $(OBJS)
+	rm -f $(MLX)
 
 fclean: clean
 	rm -f $(NAME) 
