--- a/ philo/Makefile
+++ b/ philo/Makefile
@@ -1,12 +1,13 @@
 NAME = philo
 CC= cc
-CFLAGS = 
+CFLAGS = -Wall -Wextra -Werror
 SRCS :=
 SRCS += main.c
 SRCS += ft_atoi.c
 SRCS += philo_utils.c
 SRCS += init_free.c
 SRCS += thread.c
+SRCS += monitoring.c
 
 OBJS = $(SRCS:.c=.o)
 
@@ -16,7 +17,7 @@ all: $(NAME)
 	$(CC) -c  $(CFLAGS) $<
 
 $(NAME): $(OBJS)
-	$(CC) -fsanitize=thread -o  $@ $^
+	$(CC) -o  $@ $^
 	@echo "\033[36m" --- 🔹 Compile Complete 🔹 ---
 
 clean:
