[cpp01-ex01] feat: setName 구현

--- a/Cpp01/ex01/Makefile
+++ b/Cpp01/ex01/Makefile
@@ -4,8 +4,7 @@ CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 SRCS :=
 SRCS += main.cpp
 SRCS += Zombie.cpp
-SRCS += newZombie.cpp
-SRCS += randomChump.cpp
+SRCS += zombieHorde.cpp
 
 HDRS :=
 HDRS += Zombie.hpp
