[FIX] cpp01 ex05 존재하지 않는 레벨 예외처리 추가

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,10 @@
     "__availability": "cpp",
     "deque": "cpp",
     "fstream": "cpp",
-    "stack": "cpp"
+    "stack": "cpp",
+    "__functional_base": "cpp",
+    "functional": "cpp",
+    "iterator": "cpp",
+    "utility": "cpp"
   }
 }
